refactor : 모든 폴더조회 수정